# ABS-Project-Jarvis

./: .env.example  .gitignore  README.md  ihyun_slack_api.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
backend/: main.py  pyproject.toml
backend/app/: dev_server.py
backend/app/api/: endpoints.py  router.py
backend/app/core/: config.py  errors.py
backend/app/data/: feature_runs.db
backend/app/data/mocks/: admin.json  calendar.json  samsung_health.json  slack.json  weather.json
backend/app/providers/: calendar_provider.py  mock_provider.py  samsung_health_provider.py  samsung_health_state_provider.py
backend/app/schemas/: schemas.py
backend/app/services/: admin.py  agent_interpreter.py  calendar.py  calendar_audit.py  calendar_conflicts.py  calendar_read.py  calendar_write.py  logging_service.py  orchestrator.py  samsung_health.py  slack_summary.py  sqlite.py  stt.py  weather.py
backend/app/services/assistant/: __init__.py  interpreter.py  startup_greeting.py
backend/app/services/briefing/: __init__.py  orchestrator.py
backend/app/voice/: __init__.py  service.py
backend/tests/: conftest.py  test_admin_summary.py  test_agent_interpreter_api.py  test_calendar_api.py  test_calendar_conflicts.py  test_calendar_error_contract.py  test_calendar_integration.py  test_calendar_read_range.py  test_calendar_write_api.py  test_openapi_contract.py  test_orchestrator.py  test_samsung_health_api.py  test_slack_endpoint.py  test_slack_summary.py  test_startup_greeting_api.py  test_stt_api.py  test_voice_api.py
docs/: CALENDAR_API.md  (+7 more)
(+125 files in other folders)
