[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-multi-agent"
version = "0.1.0"
description = "Python skeleton for a team-built multi-agent Jarvis assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0,<1.0.0",
  "openai>=1.0.0,<2.0.0",
  "slack-sdk>=3.30.0,<4.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
jarvis-backend = "app.dev_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
